--- a/gallery.html
+++ b/gallery.html
@@ -156,7 +156,7 @@
         <!-- Image 1 in Gallery -->
         <figure>
             <a href="#img1">
-                <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.22.38 - Create an epic, realistic depiction of a massive mythical warrior representing Mongolia. The warrior is a colossal humanoid eagle, symbolizing freedom.webp" alt="Mongolian Eagle Warrior">
+                <img src="C:DALL·E 2024-11-09 23.22.38 - Create an epic, realistic depiction of a massive mythical warrior representing Mongolia. The warrior is a colossal humanoid eagle, symbolizing freedom.webp" alt="Mongolian Eagle Warrior">
             </a>
             <figcaption>Mongolian Eagle Warrior - Symbol of Freedom</figcaption>
         </figure>
