--- a/gallery.html
+++ b/gallery.html
@@ -164,7 +164,7 @@
         <!-- Image 2 in Gallery -->
         <figure>
             <a href="#img2">
-                <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.24.40 - Create an epic, realistic depiction of a massive mythical warrior representing Sri Lanka. The warrior is a colossal humanoid elephant, symbolizing wis.webp" alt="Sri Lankan Elephant Warrior">
+                <img src="DALL·E 2024-11-09 23.24.40 - Create an epic, realistic depiction of a massive mythical warrior representing Sri Lanka. The warrior is a colossal humanoid elephant, symbolizing wis.webp" alt="Sri Lankan Elephant Warrior">
             </a>
             <figcaption>Sri Lankan Elephant Warrior - Symbol of Wisdom</figcaption>
         </figure>
@@ -172,7 +172,7 @@
         <!-- Image 3 in Gallery -->
         <figure>
             <a href="#img3">
-                <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.24.31 - Create an epic, realistic depiction of a massive mythical warrior representing Ethiopia. The warrior is a colossal humanoid Gelada baboon, symbolizing.webp" alt="Ethiopian Gelada Baboon Warrior">
+                <img src="DALL·E 2024-11-09 23.24.31 - Create an epic, realistic depiction of a massive mythical warrior representing Ethiopia. The warrior is a colossal humanoid Gelada baboon, symbolizing.webp" alt="Ethiopian Gelada Baboon Warrior">
             </a>
             <figcaption>Ethiopian Gelada Baboon Warrior - Symbol of Leadership</figcaption>
         </figure>
@@ -180,7 +180,7 @@
         <!-- Image 4 in Gallery -->
         <figure>
             <a href="#img4">
-                <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.24.11 - Create an epic, realistic depiction of a massive mythical warrior representing Greenland. The warrior is a colossal humanoid narwhal, symbolizing stre.webp" alt="Greenland Narwhal Warrior">
+                <img src="DALL·E 2024-11-09 23.24.11 - Create an epic, realistic depiction of a massive mythical warrior representing Greenland. The warrior is a colossal humanoid narwhal, symbolizing stre.webp" alt="Greenland Narwhal Warrior">
             </a>
             <figcaption>Greenland Narwhal Warrior - Symbol of Strength</figcaption>
         </figure>
@@ -188,7 +188,7 @@
         <!-- Image 5 in Gallery -->
         <figure>
             <a href="#img5">
-                <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.23.09 - Create an epic, realistic depiction of a massive mythical warrior representing Australia. The warrior is a colossal humanoid kangaroo, symbolizing agi.webp" alt="Australian Kangaroo Warrior">
+                <img src="DALL·E 2024-11-09 23.23.09 - Create an epic, realistic depiction of a massive mythical warrior representing Australia. The warrior is a colossal humanoid kangaroo, symbolizing agi.webp" alt="Australian Kangaroo Warrior">
             </a>
             <figcaption>Australian Kangaroo Warrior - Symbol of Agility</figcaption>
         </figure>
@@ -196,7 +196,7 @@
         <!-- Image 6 in Gallery -->
         <figure>
             <a href="#img6">
-                <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.23.07 - Create an epic, realistic depiction of a massive mythical warrior representing New Zealand. The warrior is a colossal humanoid kiwi bird, symbolizing .webp" alt="New Zealand Kiwi Warrior">
+                <img src="DALL·E 2024-11-09 23.23.07 - Create an epic, realistic depiction of a massive mythical warrior representing New Zealand. The warrior is a colossal humanoid kiwi bird, symbolizing .webp" alt="New Zealand Kiwi Warrior">
             </a>
             <figcaption>New Zealand Kiwi Warrior - Symbol of Cunning</figcaption>
         </figure>
@@ -204,7 +204,7 @@
         <!-- Image 7 in Gallery -->
         <figure>
             <a href="#img7">
-                <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.23.00 - Create an epic, realistic depiction of a massive mythical warrior representing Spain. The warrior is a colossal humanoid bull, symbolizing strength, r.webp" alt="Spanish Bull Warrior">
+                <img src="DALL·E 2024-11-09 23.23.00 - Create an epic, realistic depiction of a massive mythical warrior representing Spain. The warrior is a colossal humanoid bull, symbolizing strength, r.webp" alt="Spanish Bull Warrior">
             </a>
             <figcaption>Spanish Bull Warrior - Symbol of Resilience</figcaption>
         </figure>
@@ -213,49 +213,49 @@
     <!-- Lightbox Overlays (Place these below the gallery) -->
     <div id="img1" class="lightbox">
         <a href="#img7" class="prev">❮</a>
-        <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.22.38 - Create an epic, realistic depiction of a massive mythical warrior representing Mongolia. The warrior is a colossal humanoid eagle, symbolizing freedom.webp">
+        <img src="DALL·E 2024-11-09 23.22.38 - Create an epic, realistic depiction of a massive mythical warrior representing Mongolia. The warrior is a colossal humanoid eagle, symbolizing freedom.webp">
         <a href="#img2" class="next">❯</a>
         <a href="#" class="close">×</a>
     </div>
 
     <div id="img2" class="lightbox">
         <a href="#img1" class="prev">❮</a>
-        <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.24.40 - Create an epic, realistic depiction of a massive mythical warrior representing Sri Lanka. The warrior is a colossal humanoid elephant, symbolizing wis.webp">
+        <img src="DALL·E 2024-11-09 23.24.40 - Create an epic, realistic depiction of a massive mythical warrior representing Sri Lanka. The warrior is a colossal humanoid elephant, symbolizing wis.webp">
         <a href="#img3" class="next">❯</a>
         <a href="#" class="close">×</a>
     </div>
 
     <div id="img3" class="lightbox">
         <a href="#img2" class="prev">❮</a>
-        <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.24.31 - Create an epic, realistic depiction of a massive mythical warrior representing Ethiopia. The warrior is a colossal humanoid Gelada baboon, symbolizing.webp">
+        <img src="DALL·E 2024-11-09 23.24.31 - Create an epic, realistic depiction of a massive mythical warrior representing Ethiopia. The warrior is a colossal humanoid Gelada baboon, symbolizing.webp">
         <a href="#img4" class="next">❯</a>
         <a href="#" class="close">×</a>
     </div>
 
     <div id="img4" class="lightbox">
         <a href="#img3" class="prev">❮</a>
-        <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.24.11 - Create an epic, realistic depiction of a massive mythical warrior representing Greenland. The warrior is a colossal humanoid narwhal, symbolizing stre.webp">
+        <img src="DALL·E 2024-11-09 23.24.11 - Create an epic, realistic depiction of a massive mythical warrior representing Greenland. The warrior is a colossal humanoid narwhal, symbolizing stre.webp">
         <a href="#img5" class="next">❯</a>
         <a href="#" class="close">×</a>
     </div>
 
     <div id="img5" class="lightbox">
         <a href="#img4" class="prev">❮</a>
-        <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.23.09 - Create an epic, realistic depiction of a massive mythical warrior representing Australia. The warrior is a colossal humanoid kangaroo, symbolizing agi.webp">
+        <img src="DALL·E 2024-11-09 23.23.09 - Create an epic, realistic depiction of a massive mythical warrior representing Australia. The warrior is a colossal humanoid kangaroo, symbolizing agi.webp">
         <a href="#img6" class="next">❯</a>
         <a href="#" class="close">×</a>
     </div>
 
     <div id="img6" class="lightbox">
         <a href="#img5" class="prev">❮</a>
-        <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.23.07 - Create an epic, realistic depiction of a massive mythical warrior representing New Zealand. The warrior is a colossal humanoid kiwi bird, symbolizing .webp">
+        <img src="DALL·E 2024-11-09 23.23.07 - Create an epic, realistic depiction of a massive mythical warrior representing New Zealand. The warrior is a colossal humanoid kiwi bird, symbolizing .webp">
         <a href="#img7" class="next">❯</a>
         <a href="#" class="close">×</a>
     </div>
 
     <div id="img7" class="lightbox">
         <a href="#img6" class="prev">❮</a>
-        <img src="C:\Users\Rob\Downloads\DALL·E 2024-11-09 23.23.00 - Create an epic, realistic depiction of a massive mythical warrior representing Spain. The warrior is a colossal humanoid bull, symbolizing strength, r.webp">
+        <img src="DALL·E 2024-11-09 23.23.00 - Create an epic, realistic depiction of a massive mythical warrior representing Spain. The warrior is a colossal humanoid bull, symbolizing strength, r.webp">
         <a href="#img1" class="next">❯</a>
         <a href="#" class="close">×</a>
     </div>
